[metadata]
name = digsigserver
version = 0.7.2
license = MIT
license_files = LICENSE
author = Matt Madison
author_email = matt@madison.systems

[options]
packages = find:
install_requires = sanic>=21.12

[options.entry_points]
console_scripts =
    digsigserver = digsigserver.scripts.digsigserver:main
