[metadata]
name = digsigserver
version = 0.15.2
license = MIT
license_files = LICENSE
author = Matt Madison
author_email = matt@madison.systems

[options]
packages = find:
install_requires =
    sanic==22.12.0
    cryptography>=3.1

[options.entry_points]
console_scripts =
    digsigserver = digsigserver.scripts.digsigserver:main
